src/styles/global.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Roboto+Mono:wght@400;500;700&display=swap');

.time-line-container > div:last-child .education__time > .education__line {
  display: none;
}

.tip * {
  color: #002b3d;
}

.tip * > code,
.tip * > pre {
  color: #adbac7;
}

pre.astro-code {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.75rem;
}

pre.astro-code copy-code {
  opacity: 0;
  transition: opacity 100ms ease-in;
  position: sticky;
  align-self: flex-start;
  top: 0;
  right: 0;
}

pre.astro-code:hover copy-code {
  opacity: 1;
}

